<resources>
    <string name="app_name">Planner+</string>
    <string name="events">События</string>
    <string name="tasks">Задачи</string>
    <string name="ideas">Идеи</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>
    <string name="are_you_sure">Вы уверены ?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="record_idea">Введите суть идеи</string>
    <string name="record_description">Введите описание</string>
    <string name="change_theme">Сменить тему</string>
    <string name="begin_time">Начало времени</string>
    <string name="end_time">Конец времени</string>
    <string name="delete">Удалено</string>
    <string name="empty">Пусто</string>
    <string name="stopwatch">Секундомер</string>
    <string name="image">Картинка</string>
    <string name="timer">Таймер</string>
    <string name="what_are_doing">Что вы будете делать?</string>
    <string name="apply">Принять</string>
    <string name="time">Время</string>
    <string name="toStart">Начать</string>
    <string name="complete">Завершить</string>
    <string name="choose_language">Выберите Язык</string>
    <string name="change_language">Сменить язык</string>
    <string name="task">Задача</string>
    <string name="ready">Готовы ?</string>
    <string name="plan_own_day">Распланируй свой день</string>
    <string name="to_delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="add_title">Введите текст</string>
    <string name="choose_image">Выберите картинку </string>
    <string name="cancel">Отмена</string>
    <string name="what_to_do">Что бы вы хотели сделать?</string>
    <string name="help_idea_add">Для добавления новой идеи нажмите на +</string>
    <string name="help_calendar_add">Для добавления нового события нажмите на +</string>
    <string name="changing_theme">Смена темы</string>
    <string name="new_aim">Пора ставить новые цели!</string>
    <string name="achievement_app">Достижения</string>
    <string name="write_reviews">Написать отзыв</string>
    <string name="review_on_app">Отзыв на приложение Planner</string>
    <string name="done">Готово</string>
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>
    <string name="you_name">Ваше имя   ✍ </string>
    <string name="rate_app">Поставить оценку</string>
    <string name="not_enough_balanсe">Недостаточно средств на балансе !</string>
    <string name="attention_alert">Внимание!</string>
    <string name="advice1_1">\"Относитесь к деньгам с уважением \"</string>
    <string name="advice1_2">Ваши деньги это ваше «законсервированное» время и энергия, которые вы потратили, чтобы их заработать.</string>
    <string name="advice2">\"Заведите себе привычку вести учет доходов и расходов в электронном или письменном виде. \"</string>
    <string name="advice3_1">Избавьтесь от кредитных карт, потребительских кредитов и прочих долгов.</string>
    <string name="advice3_2">\" Долги давят психологически, вгоняют людей в стресс и заставляют беспокоиться о завтрашнем дне. В итоге, за пользование чужими деньгами вы заплатите не только своими деньгами, но и своим здоровьем и своей энергией.\"</string>
    <string name="advice4_1">Живите по средствам.</string>
    <string name="advice4_2">\" Когда вы нарушаете это правило, вы теряете гармонию в собственной жизни. Вы тратите деньги, которых не заработали, Фактически, пользуясь тем, что вам не принадлежит, вы можете лишиться этого в любой момент! Осознайте разницу между своими потребностями — тем, что вам действительно нужно, и своими желаниями — тем, что «неплохо было бы иметь». Расставьте приоритеты так, чтобы сначала закрывать все потребности, а то что остается пускать на хотелки и развлечения.\"</string>
    <string name="advice5_1">Откажитесь от импульсивных покупок и необязательных трат.</string>
    <string name="advice5_2">\" Составляйте список покупок перед походом в магазин и придерживайтесь его.\"</string>
    <string name="advice6_1">Работайте над повышением своих доходов.</string>
    <string name="advice6_2">\" Узнайте, за что конкретно вам платят деньги, и развивайтесь в этой области. Приобретение более глубоких знаний в узкой нише, расширение сферы ваших компетенций и ответственности, повышение качества выполненной работы, а также более быстрое выполнение работы, могут стать ключом к повышению ваших доходов.\"</string>
    <string name="advice7_2">\" Увеличение дохода — это результат длительной и регулярной работы, поэтому запаситесь терпением и начинайте двигаться к цели небольшими шагами.\"</string>
    <string name="advice7_1">Не ждите быстрых результатов.</string>
    <string name="advice8_1">Создавайте и приобретайте дополнительные источники дохода.</string>
    <string name="advice8_2">\" Секрет финансовой стабильности многих успешных людей заключается в множественных источниках дохода.\"</string>
    <string name="advice9">Берегите деньги — не тратьте их на азартные игры, финансовые пирамиды, сомнительные предприятия и сделки.</string>
    <string name="advice10_1">Не давайте деньги в долг</string>
    <string name="advice10_2">\" Велики риски и с людьми отношения испортить и деньги потерять. Оставьте банкам их работу\"</string>
    <string name="advice11_1">Не разбрасывайтесь даже небольшими деньгами.</string>
    <string name="advice11_2">\" Копейка бережет не только рубль, но и доллар, и евро!\"</string>
    <string name="advice12_1">Откажитесь от вредных финансовых привычек,</string>
    <string name="advice12_2">\" Регулярно вытягивающих у вас деньги из кошелька, но не приносящих уже былого удовольствия. Мы тратим деньги, чтобы получить какие-то эмоции. При одинаковой цене разные вещи могут приносить разное количество эмоций. Например, кофе в кафе за 200 рублей, который вы привыкли выпивать после обеда, уже не вызывает восторга и удовлетворения, но все еще обходится вашему бюджету в 1000 рублей в неделю. За ту же тысячу вы могли бы получить гораздо больше эмоций, сходив на массаж или в кино.\"</string>
    <string name="advice13_1">Не стесняйтесь спросить о скидке и воспользоваться специальными предложениями.</string>
    <string name="advice13_2">\" Продавцу наверняка будет выгоднее предложить вам скидку и продать товар, чем отказать в скидке и не продать ничего.\"</string>
    <string name="advice14_1">Изучайте литературу по финансовой грамотности.</string>
    <string name="advice14_2">\" Ваше благосостояние напрямую зависит от уровня вашей финансовой грамотности!\"</string>
    <string name="advice15">Заведите себе личный финансовый план и следуйте ему.</string>
    <string name="advice16_1">Сначала платите себе — поздно пытаться откладывать деньги после того, как вы их уже потратили.</string>
    <string name="advice16_2">\" Откладывать часть денег на достижение своих финансовых целей нужно сразу же, как только вы их получили.\"</string>
    <string name="advice17_1">Инвестирование проще, и доступнее чем вы думаете.</string>
    <string name="advice17_2">\" К тому же некоторые финансовые инструменты позволяют во многом автоматизировать этот процесс. Главное понять, настолько ли это важно для вас, что вы готовы начать действовать?\"</string>
    <string name="advice18_1">Покупайте необходимые качественные вещи.</string>
    <string name="advice18_2">\" Качественные продукты, как правило стоят дороже, зато в использовании обходится дешевле.\"</string>
    <string name="advice19_1">Следите за тем, чтобы ваши доходы всегда росли быстрее ваших расходов.</string>
    <string name="advice19_2">\" При этом ваши доходы всегда должны быть больше ваших расходов. Это один из основных принципов финансового благополучия.\"</string>
    <string name="habit">Привычки</string>
    <string name="main">Главное</string>
    <string name="finance">Финансы</string>
    <string name="new_idea">Новая идея</string>
    <string name="read">Читать</string>
    <string name="settings">Настройки</string>
    <string name="in_main_screen">- Здесь вы можете отметить что вы выполнили ваше задание из привычек, просмотреть события и перейти в нужную категорию.\n
        - Долгое нажатие на дату в календаре, что находится вверху окна позволит вам добавить новое событие или задачу на этот день в ваше расписание.</string>
    <string name="in_categories">- Для создания новой категории нажмите на +.\n
        - Долгое нажатие на категорию вызовет окно где вы можете отредактировать, удалить или заблокировать ее, а также сменить пароль.</string>
    <string name="in_timetable">- Для создания новой записи кликните на +. Вы можете выбрать один или сразу несколько дней.\n
        - Нажав на день недели вы можете просмотреть все записи на данный день. \n
        - Долгое нажатие на запись позволит вам удалить или отредактировать ее.</string>
    <string name="in_event">- Для создания нового события нажмите на +. Так же вы можете установить напоминание на нужное вам время.\n
        - Долгое нажатие на событие позволит вам удалить или редактировать его.</string>
    <string name="in_habit">Окно, которое позволит вам выработать желаемую привычку.\n
        - Для создания новой привычки нажмите на +.\n
        - Кликнув на привычку вы можете отметить что сегодня выполнили задание.\n
        - Долгое нажатие позволит удалить или отредактировать ее. Кнопка в верхнем левом углу вызовет меню. Тут вы можете узнать свой уровень, выбрать аватарку и добавить имя.</string>
    <string name="in_focus">Окно создано на основе теории о 10000 часов которая гласит, что именно столько времени нужно потратить чтобы достигнуть профессионализма в выбранной области.\n
        - Нажав на + вы можете добавить новое действие, а также открыть таймер или секундомер.\n
        - Кликнув на действие в списке вы можете указать сколько потратили на него минут. Время будет суммироваться.\n
        - Долгое нажатие позволит открыть таймер или секундомер откуда время добавится в вашу запись. При желании тут же вы можете ее удалить.</string>
    <string name="in_standup">Практика использующаяся в крупных компаниях для оптимизации процесса. Каждый сотрудник ежедневно пишет отчёт о проделанной работе и о возникших проблемах.\n
        - Кнопка + позволит создать новый стэндап.\n
        - Долгое нажатие на запись вызовет окно где вы можете удалить, отредактировать или поделиться стэндапом.</string>
    <string name="in_dream">Окно где вы можете отслеживать время потраченное на сон.\n
        - Кликнув на + вы можете создать новую запись.\n
        - Нажав на запись вы можете прочитать что вам снилось.\n
        - Долгое нажатие позволит отредактировать или удалить запись.</string>
    <string name="in_idea">- Кликнув на + вы можете добавить новую идею.\n
        - Нажав на запись вы можете просмотреть картинку, долгое же нажатие позволит удалить или отредактировать запись.</string>
    <string name="in_finance">Окно для отслеживания ваших финансов.\n
        - Вверху карточка с советами, которые позволят вам продуктивнее распоряжаться своими деньгами.\n
        - Кнопки \'Доход\' и \'Расход\' позволят вам добавить запись о том сколько вы получили денег и сколько потратили соответственно.\n
        - Здесь есть шаблонные расходы, при желании вы можете создать свой шаблон нажав на +.\n
        - Долгое нажатие на шаблон позволит его удалить.\n
        - История позволит проследить все ваши финансовые изменения.</string>
    <string name="in_setting">- Тут вы можете изменить тему и язык приложения.</string>
</resources>