<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/progress_fragment"
        android:icon="@drawable/ic_progress"
        android:title="@string/progress" />

    <item
        android:id="@+id/category_fragment"
        android:icon="@drawable/ic_check"
        android:title="@string/tasks" />

    <item
        android:id="@+id/habitFragment"
        android:icon="@drawable/ic_done"
        android:title="@string/habit" />

    <item
        android:id="@+id/events_fragment"
        android:icon="@drawable/ic_date_white"
        android:title="@string/events" />

    <item
        android:id="@+id/idea_fragment"
        android:icon="@drawable/ic_idea"
        android:title="@string/ideas" />


</menu>