<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_check"
            android:title="@string/finance" />
        <item
            android:id="@+id/nav_timing"
            android:icon="@drawable/ic_timer"
            android:title="@string/timing" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_done"
            android:title="@string/achievement_app" />

        <item
            android:id="@+id/nav_standup"
            android:icon="@drawable/ic_standup"
            android:title="Standup" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/fab_stopwatch"
            android:title="@string/settings" />
    </group>

</menu>