<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.timing.TimerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageconst"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/sw_managers_animation"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_alignParentStart="true"
            app:layout_constraintBottom_toTopOf="@id/what_do_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="stopwatch_managers.json"
            app:lottie_loop="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/stopwatch"
            android:textColor="?attr/textColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/what_do_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_are_doing"
            android:textColor="?attr/textColor"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/stopwatchTaskEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sw_managers_animation" />

        <EditText
            android:id="@+id/stopwatchTaskEdit"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/read"
            android:inputType="textCapSentences"
            android:maxLength="21"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@id/stopwatchTaskApply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/what_do_tv" />

        <Button
            android:id="@+id/stopwatchTaskApply"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:background="@drawable/rectangle_bg"
            android:text="@string/apply"
            android:textColor="#FFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stopwatchTaskEdit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stopWatchConst"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/stopwatch_clock_animation"
            android:layout_width="276dp"
            android:layout_height="247dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="stopwatch_clock.json"
            app:lottie_loop="true" />

        <Chronometer
            android:id="@+id/timerHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:textColor="?attr/textColor"
            android:textSize="62sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stopwatch_clock_animation" />

        <Button
            android:id="@+id/btnstart"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rectangle_bg"
            android:text="@string/toStart"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/btnstop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnstop"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/rectangle_bg"
            android:text="@string/complete"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>