<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/logo_wrapper"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/settings_text_color"
            app:navigationIconTint="?attr/toolbarColor"
            app:subtitleTextColor="?attr/toolbarColor"
            app:title="@string/settings"
            app:titleTextColor="?attr/toolbarColor" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/logo_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?attr/toolbarColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_wrapper" />


    <androidx.cardview.widget.CardView
        android:id="@+id/theme_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/logo_wrapper">

        <LinearLayout
            android:id="@+id/change_theme_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rectangle_background"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/change_theme"
                android:textColor="?attr/settings_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/language_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/theme_card">

        <LinearLayout
            android:id="@+id/change_language_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rectangle_background"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:drawablePadding="15dp"
                android:text="@string/change_language"
                android:textColor="?attr/settings_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/share_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/language_card">

        <LinearLayout
            android:id="@+id/five_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rectangle_background"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:drawablePadding="15dp"
                android:text="@string/share"
                android:textColor="?attr/settings_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>