<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/title_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/new_idea"
                android:textAlignment="center"
                android:textColor="?attr/textColor"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/record_idea"
            android:padding="16dp"
            android:textColorHint="?attr/hint_color"
            app:boxBackgroundColor="?attr/windowColor"
            app:boxCornerRadiusBottomEnd="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxStrokeColor="?attr/textColor"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="?attr/toolbarColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_card">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences"
                style="@style/editTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:drawableEnd="@drawable/ic_choose_image"
            android:drawablePadding="4dp"
            android:elevation="8dp"
            android:text="@string/image"
            app:backgroundTint="?attr/toolbarColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_wrapper" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:src="@drawable/ic_choose_image"
            app:layout_constraintBottom_toBottomOf="@id/choose_image_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/choose_image_button"
            app:layout_constraintTop_toTopOf="@id/choose_image_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginVertical="10dp"
            android:textAllCaps="false"
            android:elevation="8dp"
            android:text="@string/apply"
            android:textSize="16sp"
            app:backgroundTint="?attr/toolbarColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>